--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="container">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, impedit!</p>
-    </div>
+    <header class="header">
+        <div class="container">
+            <div class="header_container tac">
+                <h1 class="header_title">Lorem, ipsum dolor sit amet<br>consectetur adipisicing.</h1>
+                <p class="header_subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, optio.</p>
+                <p class="header_text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea commodi nemo ut porro quos doloremque, magnam omnis deleniti labore maxime exercitationem, nihil cumque, quae blanditiis. Autem est magni sequi atque voluptas a! At, autem aperiam. Provident nisi blanditiis quibusdam sint iusto minima laboriosam natus eos a ducimus voluptas voluptate, totam iste vel quos repellendus, earum nobis cumque. Adipisci dolorum neque, officia, sapiente numquam doloribus quaerat maxime quisquam aliquam, accusamus debitis!</p>
+                <a href="#" class="header_button">Заполнить Бриф</a>
+            </div>
+        </div>
+    </header>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
