--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="css/grid.min.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <script src="https://kit.fontawesome.com/52f827a274.js"></script>
 </head>
 <body>
     <header class="header">
@@ -43,19 +45,20 @@
     <section class="section feedback">
         <div class="container">
             <div class="row">
-                <div class="col-sm-7">
+                <div class="col-lg-7 col-md-6">
                     <div class="feedback_text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta ducimus deserunt, fugit quae repellendus. Quae cumque cum deleniti repellendus commodi obcaecati corporis necessitatibus laboriosam dicta vero, est voluptatibus numquam nostrum ut debitis illum quod eum sit recusandae tenetur ipsam ducimus culpa natus! Cupiditate, autem rerum placeat saepe rem deserunt. Culpa quia enim est adipisci alias ratione soluta fugiat modi cum quos similique expedita reiciendis molestias illum, totam quasi magni provident libero ipsa consectetur quam ut? Perspiciatis placeat quam dignissimos obcaecati harum ad minus voluptatem quidem nam reiciendis, corrupti voluptates adipisci debitis hic sint minima nostrum iusto dolorem ea temporibus accusamus necessitatibus distinctio? Eius, beatae? Repudiandae consequatur ullam eius, iure dolor magni voluptates eaque, officia et placeat fugit possimus inventore earum reiciendis totam modi sint, quis dolore tenetur qui! Soluta ducimus dolor modi accusamus neque adipisci est optio mollitia quia veritatis, fugit quaerat dolorum, incidunt culpa in! Similique eius impedit esse, vitae expedita delectus atque dolorem? Atque nisi tenetur amet numquam nam magnam maiores iste a illo qui commodi, quia voluptatum consectetur, nulla voluptate accusamus similique reiciendis fugit adipisci! Explicabo ab temporibus accusamus totam excepturi nobis dolor eveniet nam officiis nostrum error impedit, soluta veniam asperiores ipsum quasi neque quos?</p>
                     </div>
                 </div>
-                <div class="col-sm-4 offset-sm-1">
+                <div class="col-lg-4 col-md-6 offset-lg-1">
                     <div class="feedback_form">
                         <form action="">
                             <h3>Форма обратной связи</h3>
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
+                            <input type="text" placeholder="&#xf007; ФИО">
+                            <input type="text" placeholder="&#xf0e0; Электронная почта">
+                            <input type="text" placeholder="Моб. телефон">
+                            <input type="text" placeholder="Страна проживания">
+                            <button type="submit">Оставить заявку</i></button>
                         </form>
                     </div>
                 </div>
