--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_text">
+                <div class="footer_logo">Your Logo |</div>
+                <div class="footer_copy">&copy;</div>
+                <div class="footer_phone">+380677117713</div>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
